added over loby code i've used in lobby.js, put socket in client.js, added lobby html, added Messages construct

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -5,6 +5,12 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
   </head>
+     <section id="lobby">
+      <input type="text" id="room_name_input" placeholder="Enter Room Name...">
+      <button type="button" id="create_room_button">Create Room</button>
+      <ul id="lobby_list">
+      </ul>
+    </section>
   <body>
   </body>
 </html>
