base/pseudo code for client side behaviors

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -12,6 +12,7 @@
       </ul>
     </section>
     <section id="game">
+        <canvas id="canvas" height="500" width="700">Please use an HTML 5 browser</canvas>
     </section>
   <body>
   </body>
