--- a/hosted/index.html
+++ b/hosted/index.html
@@ -12,7 +12,7 @@
       </ul>
     </section>
     <section id="game">
-        <canvas id="canvas" height="500" width="700">Please use an HTML 5 browser</canvas>
+        <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
     </section>
   <body>
   </body>
