--- a/hosted/index.html
+++ b/hosted/index.html
@@ -13,7 +13,9 @@
     </section>
     <section id="game">
         <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
+        <div id="debug" style="display: none;">You are the host!</div>
     </section>
+    
   <body>
   </body>
 </html>
