prelim ad positioning. need to flexbox the bottom

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -15,7 +15,10 @@
         <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
         <div id="debug" style="display: none;">You are the host!</div>
     </section>
-    
+    <image class = "ad" id= "ad1" src = ""/>
+    <div class = "flexbox">
+        <image class = "ad" id= "ad2" src = ""/>
+    </div>
   <body>
   </body>
 </html>
