placeholder ads. img issue cody is gonna look at

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -13,12 +13,11 @@
     </section>
     <section id="game">
         <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
+        <img class = "ad" id= "ad1" src = "./placeholder2.jpg" />
         <div id="debug" style="display: none;">You are the host!</div>
     </section>
-    <image class = "ad" id= "ad1" src = ""/>
-    <div class = "flexbox">
-        <image class = "ad" id= "ad2" src = ""/>
-    </div>
+    
+    <img class = "ad" id= "ad2" src = "./hosted/placeholder7.png" />
   <body>
   </body>
 </html>
