use express, ads, commented out error in structure

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="bundle.js"></script>
+    <script src="/assets/bundle.js"></script>
   </head>
      <section id="lobby">
       <input type="text" id="room_name_input" placeholder="Enter Room Name...">
@@ -13,11 +13,11 @@
     </section>
     <section id="game">
         <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
-        <img class = "ad" id= "ad1" src = "./placeholder2.jpg" />
+        <img class = "ad" id= "ad1" src = "" />
         <div id="debug" style="display: none;">You are the host!</div>
     </section>
     
-    <img class = "ad" id= "ad2" src = "./hosted/placeholder7.png" />
+    <img class = "ad" id= "ad2" src = "" />
   <body>
   </body>
 </html>
