part of lcient side skin selection

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -29,6 +29,7 @@
               </section>
               <button type="button" id="buyButton">Buy</button>
               <button type="button" id="equipButton">Equip</button>
+              <button type="button" id="lobbyButton">Lobby</button>
           </form>
       </section>
     </section>
