skins are purchaseable and equippable

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -33,7 +33,12 @@
               <button type="button" id="equipButton">Equip</button>
               <button type="button" id="lobbyButton">Lobby</button>
           </form>
+          <p>Note: buying or equipping a skin only lasts for the current session and is lost on refresh</p>
       </section>
+    </section>
+    <section id="unsuccessfulEquip">
+        <p>Couldn't equip selected skin, you don't own it</p>
+        <button type="button" id="closeButton">Okay</button>
     </section>
     <section id="game">
         <canvas id="canvas" height="500" width="700" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
