canvas images in page

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -46,6 +46,15 @@
         <div id="debug" style="display: none;">You are the host!</div>
     </section>
     <img class = "ad" id= "ad2" src = "" />
+    
+    <img id="playerImage" class="canvasImage" src="sprites/Castles.png"/>
+    <img id="createStructImage" class="canvasImage" src="sprites/CreateAStruct.png"/>
+    <img id="shieldImage" class="canvasImage" src="sprites/Shield.png"/>
+    <img id="farmImage" class="canvasImage" src="sprites/Farms.png"/>
+    <img id="attackImage" class="canvasImage" src="sprites/BlackSmith.png"/>
+    <img id="ready" class="canvasImage" src="ready.png"/>
+    <img id="readyPress" class="canvasImage" src="readyPress.png"/>
+    <img id="leave" class="canvasImage" src="leave.png"/>
   <body>
   </body>
 </html>
