--- a/hosted/index.html
+++ b/hosted/index.html
@@ -49,13 +49,13 @@
     </section>
     <img class = "ad" id= "ad2" src = "" />
     
-    <img id="playerImage" class="canvasImage" src="sprites/Castles.png"/>
-    <img id="createStructImage" class="canvasImage" src="sprites/CreateAStruct.png"/>
-    <img id="shieldImage" class="canvasImage" src="sprites/Shield.png"/>
-    <img id="farmImage" class="canvasImage" src="sprites/Farms.png"/>
-    <img id="attackImage" class="canvasImage" src="sprites/BlackSmith.png"/>
-    <img id="ready" class="canvasImage" src="ready.png"/>
-    <img id="readyPress" class="canvasImage" src="readyPress.png"/>
-    <img id="leave" class="canvasImage" src="leave.png"/>
+    <img id="playerImage" class="canvasImage" src="assets/sprites/Castles.png"/>
+    <img id="createStructImage" class="canvasImage" src="assets/sprites/CreateAStruct.png"/>
+    <img id="shieldImage" class="canvasImage" src="assets/sprites/Shield.png"/>
+    <img id="farmImage" class="canvasImage" src="assets/sprites/Farms.png"/>
+    <img id="attackImage" class="canvasImage" src="assets/sprites/BlackSmith.png"/>
+    <img id="ready" class="canvasImage" src="assets/ready.png"/>
+    <img id="readyPress" class="canvasImage" src="assets/readyPress.png"/>
+    <img id="leave" class="canvasImage" src="assets/leave.png"/>
   </body>
 </html>
