mergin in css and html changes

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -5,9 +5,9 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/assets/bundle.js"></script>
   </head>
-  <body>
+  <body class="movingBG">
     <img class = "ad" id= "ad1" src = "" />
-     <section id="lobby" class="lobby">
+     <section id="lobby">
       <section id="roomSelection">
           <input type="text" id="room_name_input" placeholder="Enter Room Name...">
           <button type="button" id="create_room_button">Create Room</button>
