--- a/hosted/index.html
+++ b/hosted/index.html
@@ -52,6 +52,7 @@
     <img id="playerImage" class="canvasImage" src="assets/sprites/Castles.png"/>
     <img id="createStructImage" class="canvasImage" src="assets/sprites/CreateAStruct.png"/>
     <img id="shieldImage" class="canvasImage" src="assets/sprites/Shield.png"/>
+    <img id="field" class="canvasImage" src="assets/sprites/Field1.png"/>
     <img id="farmImage" class="canvasImage" src="assets/sprites/Farms.png"/>
     <img id="attackImage" class="canvasImage" src="assets/sprites/BlackSmith.png"/>
     <img id="ready" class="canvasImage" src="assets/ready.png"/>
