--- a/hosted/index.html
+++ b/hosted/index.html
@@ -55,6 +55,7 @@
     <img id="field" class="canvasImage" src="assets/sprites/Field1.png"/>
     <img id="farmImage" class="canvasImage" src="assets/sprites/Farms.png"/>
     <img id="attackImage" class="canvasImage" src="assets/sprites/BlackSmith.png"/>
+    <img id="emptyLotImage" class="canvasImage" src="assets/sprites/EmptyLot.png"/>
     <img id="attacks" class="canvasImage" src="assets/sprites/Attacks.png"/>
     <img id="ready" class="canvasImage" src="assets/ready.png"/>
     <img id="readyPress" class="canvasImage" src="assets/readyPress.png"/>
