stopped the scrolling while in game and start the scrolling when in lobby

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -44,7 +44,7 @@
     </section>
     
     <section id="game">
-        <canvas id="canvas" height="704" width="704" style="border: 1px solid black;">Please use an HTML 5 browser</canvas>
+        <canvas id="canvas" height="704" width="704">Please use an HTML 5 browser</canvas>
         <div id="debug" style="display: none;">You are the host!</div>
     </section>
     <img class = "ad" id= "ad2" src = "" />
