--- a/hosted/index.html
+++ b/hosted/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
     <link rel="stylesheet" href="/assets/style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="/assets/bundle.js"></script>
