display death icon over dead players

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -63,5 +63,7 @@
     <img id="ready" class="canvasImage" src="assets/ready.png"/>
     <img id="readyPress" class="canvasImage" src="assets/readyPress.png"/>
     <img id="leave" class="canvasImage" src="assets/leave.png"/>
+    <img id="crown" class="canvasImage" src="assets/sprites/CrownIcon.png"/>
+    <img id="skull" class="canvasImage" src="assets/sprites/SkullIcon.png"/>
   </body>
 </html>
