Winners pannel is drawn properly. Ready Up assets implemented

--- a/hosted/index.html
+++ b/hosted/index.html
@@ -59,9 +59,10 @@
     <img id="emptyLotImage" class="canvasImage" src="assets/sprites/EmptyLot.png"/>
     <img id="pannels" class="canvasImage" src="assets/sprites/Pannels1.png"/>
     <img id="pannels2" class="canvasImage" src="assets/sprites/Pannels2.png"/>
+    <img id="winnersPannel" class="canvasImage" src="assets/sprites/WinnersPannel.png"/>
     <img id="attacks" class="canvasImage" src="assets/sprites/Attacks.png"/>
-    <img id="ready" class="canvasImage" src="assets/ready.png"/>
-    <img id="readyPress" class="canvasImage" src="assets/readyPress.png"/>
+    <img id="ready" class="canvasImage" src="assets/sprites/ReadyUp1.png"/>
+    <img id="readyPress" class="canvasImage" src="assets/sprites/ReadyUp2.png"/>
     <img id="leave" class="canvasImage" src="assets/leave.png"/>
     <img id="crown" class="canvasImage" src="assets/sprites/CrownIcon.png"/>
     <img id="skull" class="canvasImage" src="assets/sprites/SkullIcon.png"/>
