--- a/hosted/index.html
+++ b/hosted/index.html
@@ -13,6 +13,7 @@
           <input type="text" id="room_name_input" placeholder="Enter Room Name...">
           <button type="button" id="create_room_button">Create Room</button>
           <button type="button" id="chooseSkinButton">Skins</button>
+          <button type="button" id="instructionsButton">Instructions</button>
           <ul id="lobby_list">
           </ul>
       </section>
@@ -37,6 +38,29 @@
               <button type="button" id="lobbyButton">Lobby</button>
           </form>
           <p>Note: buying or equipping a skin only lasts for the current session and is lost on refresh</p>
+      </section>
+      <section id = "instructions">
+          <p>To play:</p>
+          <br>
+          <br>
+          <p>Click on your castle to generate population</p>
+          <br>
+          <p>Click on enemy castles to send attacks at them at the cost of population</p>
+          <br>
+          <p>Click on the empty brown squares nearby your castle to make a farm, blacksmith or shield at the cost of population</p>
+          <br>
+          <p>Farms generate 1 population every second</p>
+          <br>
+          <p>Blacksmiths increase the damage your attacks do</p>
+          <br>
+          <p>Shields have giant healthpools to defend you from attacks in the chosen direction</p>
+          <br>
+          <p>All 3 structures guard you from attacks coming down that lane</p>
+          <br>
+          <p>Try to outlast your opponents and be the only castle standing!</p>
+          <br>
+          <br>
+          <button type="button" id="returnButton">Lobby</button>
       </section>
     </section>
     <section id="unsuccessfulEquip">
